# stagehand

./: .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Package.resolved  Package.swift  README.md  Stagehand.podspec  StagehandTesting.podspec
.github/workflows/: ci.yml  pod-lint.yml  spm-build.yml  xcode-build.yml
Example/: Gemfile  Podfile
Example/Performance Tests/: AnimationCurvePerformanceTests.swift  TransformPerformanceTests.swift
Example/Stagehand/: AnimationCancelationViewController.swift  AnimationCurveViewController.swift  AnimationFactory.swift  AnimationGroupViewController.swift  AnimationQueueViewController.swift  AppDelegate.swift  CGAffineTransformDebuggingViewController.swift  ChildAnimationProgressViewController.swift  ChildAnimationsViewController.swift  ChildAnimationsWithCurvesViewController.swift  CollectionKeyframesViewController.swift  ColorAnimationsViewController.swift  DemoViewController.swift  ExecutionBlockViewController.swift  Info.plist  InteractiveAnimationsViewController.swift  LayerTransformViewController.swift  NestedAnimationGroupViewController.swift  NewsFeedTransitionDetailContext.swift  NewsFeedTransitionListContext.swift  PerformanceBenchmarkViewController.swift  PropertyAssignmentViewController.swift  RelativeAnimationsViewController.swift  RepeatingAnimationsViewController.swift  RootViewController.swift  ShapeLayerUtils.swift  SimpleAnimationsViewController.swift  SpringCurveViewController.swift  TextMorphAnimationViewController.swift
Example/Stagehand Tutorial.playground/: contents.xcplayground
Example/Stagehand.xcodeproj/: project.pbxproj
Example/Stagehand.xcworkspace/: contents.xcworkspacedata
Example/Unit Tests/: AnimatableContainerView.swift  AnimationCurveSnapshotTests.swift  AnimationGroupTests.swift  AnimationInstanceTests.swift  AnimationSnapshotTests.swift  (+17 more)
Scripts/: build.swift  ci.sh  rename-snapshots.swift
(+85 files in other folders)
