load(
    "@rules_apple//apple:ios.bzl",
    "ios_framework",
    "ios_unit_test",
)
load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_library",
)

swift_library(
    name = "Stagehand.lib",
    srcs = glob(["Sources/Stagehand/**/*.swift"]),
    module_name = "Stagehand",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [],
)

swift_library(
    name = "StagehandTestingCore.lib",
    testonly = True,
    srcs = glob(["Sources/StagehandTesting/Core/**/*.swift"]),
    defines = ["BAZEL_PACKAGE"],
    module_name = "StagehandTestingCore",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [":Stagehand.lib"],
)

swift_library(
    name = "StagehandTesting_iOSSnapshotTestCase.lib",
    testonly = True,
    srcs = glob(["Sources/StagehandTesting/iOSSnapshotTestCase/**/*.swift"]),
    defines = ["BAZEL_PACKAGE"],
    module_name = "StagehandTesting_iOSSnapshotTestCase",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":Stagehand.lib",
        ":StagehandTestingCore.lib",
        "@ios_snapshot_test_case//:iOSSnapshotTestCase",
    ],
)

ios_framework(
    name = "Stagehand",
    bundle_id = "com.squareup.Stagehand",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = "12.0",
    visibility = ["//visibility:public"],
    deps = [":Stagehand.lib"],
)

ios_framework(
    name = "StagehandTesting_iOSSnapshotTestCase",
    testonly = True,
    bundle_id = "com.squareup.StagehandTesting",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Sources/Info.plist"],
    minimum_os_version = "12.0",
    visibility = ["//visibility:public"],
    deps = [":StagehandTesting_iOSSnapshotTestCase.lib"],
)
